About US Page changes

--- a/index.html
+++ b/index.html
@@ -149,44 +149,58 @@
                   role="tabpanel"
                   aria-labelledby="pills-home-tab"
                 >
-                  <div class="row col py-2 px-0 mx-0">
-                    <div class="col-auto rounded p-1 bg-violet"></div>
-                    <div class="col-11 font-medium">Industrial Automation</div>
-                  </div>
-                  <div class="row col py-2 px-0 mx-0 border-bottom border-secondary">
-                    <div class="col-auto pl-2 pr-0">
-                      <div class="col pr-0 font-lead">
-                        Industrial Automation team consists of two Field Engineers, Lingesh and Manikanta. They have
-                        combined experience of 6 years working on various control panels, different varieties of PLCs
-                        and CNCs.
+                  <div class="card-deck">
+                    <div class="card shadow rounded-lg">
+                      <div class="card-header font-medium">
+                        <div class="row px-0 align-items-center">
+                          <div style="color: #673ab7;" class="font-big col-auto">
+                            <i class="fas fa-cogs rounded-lg"></i>
+                          </div>
+                          <div class="col">Industrial Automation</div>
+                        </div>
+                      </div>
+                      <div class="card-body">
+                        <p class="card-text font-lead">
+                          Industrial Automation team consists of two Instrumentation Engineers, Lingesh and Manikanta.
+                          They have combined experience of 4 years working on various control panels, different
+                          varieties of PLCs and CNCs.
+                        </p>
                       </div>
                     </div>
-                  </div>
-                  <div class="row col py-2 px-0 mx-0">
-                    <div class="col-auto rounded p-1 bg-indigo"></div>
-                    <div class="col-11 font-medium">Operational Technology</div>
-                  </div>
-                  <div class="row col py-2 px-0 mx-0 border-bottom border-secondary">
-                    <div class="col-auto pl-2 pr-0">
-                      <div class="col pr-0 font-lead">
-                        Operational Technology team consists of four electronic communication engineers, Vivek, Harsha,
-                        Mahendra, and Satish. They are proficient with Embedded systems and currently working on Edge
-                        Technologies. The team has been working with IEEE for the past 2 years for various projects to
-                        help standardize IoT.
+                    <div class="card shadow rounded-lg">
+                      <div class="card-header font-medium">
+                        <div class="row px-0 align-items-center">
+                          <div style="color: #3f51b5;" class="font-big col-auto">
+                            <i class="fas fa-microchip rounded-lg"></i>
+                          </div>
+                          <div class="col">Operational Technology</div>
+                        </div>
+                      </div>
+                      <div class="card-body">
+                        <p class="card-text font-lead">
+                          Operational Technology team consists of four electronic communication engineers, Vivek,
+                          Harsha, Mahendra, and Satish. They are proficient with Embedded systems and currently working
+                          on Edge Technologies. The team has been working with IEEE for the past 2 years for various
+                          projects to help standardize IoT.
+                        </p>
                       </div>
                     </div>
-                  </div>
-                  <div class="row col py-2 px-0 mx-0">
-                    <div class="col-auto rounded p-1 bg-blue"></div>
-                    <div class="col-11 font-medium">Information Technology</div>
-                  </div>
-                  <div class="row col py-2 px-0 mx-0 border-bottom border-secondary">
-                    <div class="col-auto pl-2 pr-0">
-                      <div class="col pr-0 font-lead">
-                        Information Technology team consists of three computer science engineers, Vignan, Ashok and
-                        Harika. The team works with the latest technologies such as Flutter for Mobile, Go and Rust
-                        Programming Languages to produce desired results. The team is proficient with NodeJS and
-                        MongoDB.
+                    <div class="card shadow rounded-lg">
+                      <div class="card-header font-medium">
+                        <div class="row px-0 align-items-center">
+                          <div style="color: #2196f3;" class="font-big col-auto">
+                            <i class="fas fa-cloud rounded-lg"></i>
+                          </div>
+                          <div class="col">Information Technology</div>
+                        </div>
+                      </div>
+                      <div class="card-body">
+                        <p class="card-text font-lead">
+                          Information Technology team consists of three computer science engineers, Vignan, Ashok and
+                          Harika. The team works with the latest technologies such as Flutter for Mobile, Go and Rust
+                          Programming Languages to produce desired results. The team is proficient with NodeJS and
+                          MongoDB.
+                        </p>
                       </div>
                     </div>
                   </div>
@@ -625,7 +639,9 @@
             </div>
           </section>
         </main>
-        <footer class="row col row-cols-1 p-0 m-0 bg-grey align-self-end align-items-center justify-content-between">
+        <footer
+          class="row col row-cols-1 p-0 m-0 bg-grey align-self-end align-items-center border-top rounded justify-content-between"
+        >
           <div class="col-auto text-md-left">Copyright @Actualize 2020</div>
           <div class="col-auto text-md-right">Actualize is part of Texoham Center for Advanced Computing</div>
         </footer>
